2013-02-27 Bjoern <sarrazin@physik.uni-bonn.de>

	* postProcessing/edgeDetection
	- add missing scripts edgeChain, edgeScript, job_edge, makeJobForMe

	* postProcessing/postProcessing.h
	- check for chi2 = nan

	* postProcessing/postProcessing.h
	- use 1200 and 2500 instead of 1190 and 2490 for M0 and M12 if out of grid


2013-02-26 Bjoern <sarrazin@physik.uni-bonn.de>
	
	* postProcessing/README/setup.sh
	- sub dirs for chi2 calculation
	- set VERBOSE here (removed from batch scripts - to be continued)

	* postProcessing/multiplePointsRemoval/makeAllJobs
	- remove loop over observables

	* postProcessing/calculateChi2/makeAllJobs
	- create job_directory_CHI2 if not exits, cd to it and cp needed stuff (to be continued with other makeAllJobs scripts)

	* postProcessing/calculateChi2/job_postProcessing
	- create output dir before trying to copy the file
	
	* inputs/summer2012/postProcessing/
	- add missing input files

	* postProcessing/LHC.h
	- get histo h_chi2_corr_offgrid_M0 instead of h_chi2_corr_M0 from root file
	- remove unused hChi2_corr 
	
	
2013-02-25 Bjoern <sarrazin@physik.uni-bonn.de>

	* postprocessing/README/setup.sh
	- define a scratchPath and fitinoPath at the top, make use of it later
	- add whereIsSetupForSed variable
	- setup ROOT
	- setup gcc 432
	- add current working dir to LD_LIBRARY_PATH

	* postprocessing/compil
	- use $fittinoPath instead of hard coded path
	- use HS from the theorycodes directory
	- include $fittinoPath/tools/GetToyLHCChi2/ProfileLikelihood/  as include directory

	* skeleton scripts running on batch nodes
	  (job_multiplePointsRemoval, job_postProcessing, job_bpr - to be continued):
	- copy  $tools_directory/libToyLHCChi2Provider.so
	- remove root setup
	- use WHERE_IS_SETUP
	- source setup.sh
	- do not write mails

	* makeJobsForMe
	 (multiplepointsremoval, calculationChi2, buggyPointRemoval - to be continued)
	- replace WHERE_IS_SETUP via sed in skeleton files

	* job_multiplePointsRemoval