@@ -1,3 +1,12 @@
+2013-02-28 Bjoern <sarrazin@physik.uni-bonn.de>
+
+	* postProcessing/README/setup.sh
+	- add job_directory_SPLINES
+
+	* postProcessing/README/calculationChi2/job_postProcessing
+	- copy 2011 LHC histo
+
+
 2013-02-27 Bjoern <sarrazin@physik.uni-bonn.de>
 
 	* postProcessing/edgeDetection
